WIP: working on tunnels UI

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,8 @@
     <title>Phantom</title>
 </head>
 
-<body class="h-full bg-gray-100 dark:bg-slate-900">
+<body
+    class="h-full bg-gray-100 dark:bg-slate-900 scrollbar-thin scrollbar-thumb-gray-700 scrollbar-track-white dark:scrollbar-thumb-slate-700 dark:scrollbar-track-slate-800 overflow-y-scroll">
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
 </body>
