--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,10 +6,24 @@
     <link rel="icon" href="data:;base64,iVBORw0KGgo=">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Phantom</title>
+    <link href="./please-wait/please-wait.css" rel="stylesheet">
+    <style>
+        .pg-loading-logo {
+            width: 100px;
+        }
+    </style>
 </head>
 
 <body
     class="h-full bg-gray-100 dark:bg-slate-900 scrollbar-thin scrollbar-thumb-gray-700 scrollbar-track-white dark:scrollbar-thumb-slate-700 dark:scrollbar-track-slate-800 overflow-y-scroll">
+    <script type="text/javascript" src="./please-wait/please-wait.min.js"></script>
+    <script type="text/javascript">
+        window.loading_screen = window.pleaseWait({
+            logo: "./appicon.png",
+            backgroundColor: '#1e293b',
+            loadingHtml: "<p class='loading-message text-white'>Amazing things come to those who wait</p>"
+        });
+    </script>
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
 </body>
