--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" class="h-full bg-gray-100">
-
-<head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="data:;base64,iVBORw0KGgo=">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phantom</title>
-    <link href="./please-wait/please-wait.css" rel="stylesheet">
-    <style>
-        .pg-loading-logo {
-            width: 100px;
-        }
-    </style>
-</head>
+    <link href="./please-wait/please-wait.css" rel="stylesheet" />
+  </head>
 
-<body
-    class="h-full bg-gray-100 dark:bg-slate-900 scrollbar-thin scrollbar-thumb-gray-700 scrollbar-track-white dark:scrollbar-thumb-slate-700 dark:scrollbar-track-slate-800 overflow-y-scroll">
-    <script type="text/javascript" src="./please-wait/please-wait.min.js"></script>
+  <body
+    class="h-full overflow-y-scroll bg-gray-100 scrollbar-thin scrollbar-track-white scrollbar-thumb-gray-700 dark:bg-slate-900 dark:scrollbar-track-slate-800 dark:scrollbar-thumb-slate-700"
+  >
+    <script
+      type="text/javascript"
+      src="./please-wait/please-wait.min.js"
+    ></script>
     <script type="text/javascript">
-        window.loading_screen = window.pleaseWait({
-            logo: "./appicon.png",
-            backgroundColor: '#1e293b',
-            loadingHtml: "<p class='loading-message text-white'>Amazing things come to those who wait</p>"
-        });
+      window.loading_screen = window.pleaseWait({
+        logo: "./appicon.png",
+        backgroundColor: "#1e293b",
+        loadingHtml:
+          "<p class='loading-message text-white'>Amazing things come to those who wait</p>",
+      });
     </script>
     <div id="app"></div>
     <script type="module" src="./src/main.ts"></script>
-</body>
-
+  </body>
 </html>
