--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="h-full bg-gray-100">
+<html lang="en" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="data:;base64,iVBORw0KGgo=" />
@@ -9,7 +9,7 @@
   </head>
 
   <body
-    class="h-full overflow-y-scroll bg-gray-100 scrollbar-thin scrollbar-track-white scrollbar-thumb-gray-700 dark:bg-slate-900 dark:scrollbar-track-slate-800 dark:scrollbar-thumb-slate-700"
+    class="h-full overflow-y-scroll bg-gray-200 scrollbar-thin scrollbar-track-white scrollbar-thumb-gray-700 dark:bg-slate-900 dark:scrollbar-track-slate-800 dark:scrollbar-thumb-slate-700"
   >
     <script
       type="text/javascript"
