--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
   </head>
 
   <body
-    class="h-full overflow-y-scroll bg-gray-200 scrollbar-thin scrollbar-track-white scrollbar-thumb-gray-700 dark:bg-slate-900 dark:scrollbar-track-slate-800 dark:scrollbar-thumb-slate-700"
+    class="h-full overflow-y-scroll bg-gray-200/75 scrollbar-thin scrollbar-track-white scrollbar-thumb-gray-700 dark:bg-slate-900 dark:scrollbar-track-slate-800 dark:scrollbar-thumb-slate-700"
   >
     <script
       type="text/javascript"
